# tornado-shortener

./: .gitignore  MANIFEST.in  README.md  README.parameter.md  app.py  handler.py  requirements.txt  setup.cfg  setup.py  test.py  tox.ini  utils.py
conf/: nginx.conf  supervisor.conf  supervisord.conf
templates/: redirect.android.fallback.html  redirect.android.html  redirect.ios.fallback.html
tests/: test_shortener.py
tornadoshortener/: app.py  handler.py  utils.py
tornadoshortener/templates/: redirect.android.fallback.html  redirect.android.html  redirect.ios.fallback.html  redirect.ios.html
