[metadata]
name = tornadoshortener
version = 1.0.0
author = David Nellessen
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = tornadoshortener
package-data = tornadoshortener/templates = templates/*

[entry_points]
console_scripts =
    tornadoshortener = tornadoshortener.app:main
