[metadata]
name = tornadoshortener
version = 3.0.0
author = David Nellessen
author_email = davidnellessen@gmail.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages = tornadoshortener
package-data = tornadoshortener/templates = templates/*

[entry_points]
console_scripts =
    tornadoshortener = tornadoshortener.app:main

[egg_info]
tag_build =
